# controller/admin_login.go
@@ -1,0 +1,34 @@
+package controller
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/jmdrws/go_gateway/dto"
+	"github.com/jmdrws/go_gateway/middleware"
+)
+
+type AdminLoginController struct{}
+
+func AdminLoginRegister(group *gin.RouterGroup) {
+	adminLogin := &AdminLoginController{}
+	group.POST("/login", adminLogin.AdminLogin)
+}
+
+// AdminLogin godoc
+// @Summary 管理员登录
+// @Description 管理员登录
+// @Tags 管理员接口
+// @ID /admin_login/login
+// @Accept  json
+// @Produce  json
+// @Param body body dto.AdminLoginInput true "body"
+// @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
+// @Router /admin_login/login [post]
+func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
+	params := &dto.AdminLoginInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 1001, err)
+		return
+	}
+	out := &dto.AdminLoginOutput{Token: params.UserName}
+	middleware.ResponseSuccess(c, out)
+}
